Bug :: fix the schedule styles on iphone

--- a/app/assets/stylesheets/_games.scss
+++ b/app/assets/stylesheets/_games.scss
@@ -162,6 +162,7 @@
           float: right;
           text-align: center;
           width: 80px;
+          @include breakpoint(l-one) { width: 40px; }
         }
       }
     }
